<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectedTrainText"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/selectedTrainText"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capoeiraImageView" />

    <ImageView
        android:id="@+id/capoeiraImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="Capoeirista Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capoeira2" />

    <EditText
        android:id="@+id/addWorkoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="@string/workoutAutoFillHint"
        android:ems="10"
        android:hint="@string/workoutHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedTrainText" />

    <Button
        android:id="@+id/addWorkoutButton"
        android:layout_width="211dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/addWorkoutButton"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWorkoutText" />

    <Button
        android:id="@+id/chooseWorkoutButton"
        android:layout_width="416dp"
        android:layout_height="68dp"
        android:background="@color/colorPrimary"
        android:text="@string/chooseWorkoutButton"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>